--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "API for the music contest server",
   "main": "index.js",
   "scripts": {
-	"prestart": "npm install",
-	"start": "node index.js"
+    "prestart": "npm install",
+    "start": "node index.js"
   },
   "keywords": [
     "swagger"
@@ -13,8 +13,13 @@
   "license": "Unlicense",
   "private": true,
   "dependencies": {
+    "async": "^2.4.0",
     "connect": "^3.2.0",
+    "fs": "0.0.1-security",
     "js-yaml": "^3.3.0",
-    "swagger-tools": "0.10.1"
+    "opn": "^5.0.0",
+    "randomstring": "^1.1.5",
+    "swagger-tools": "0.10.1",
+    "youtube-info": "^1.1.1"
   }
 }
