--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "async": "^2.4.0",
     "connect": "^3.2.0",
+    "cron": "^1.2.1",
     "fs": "0.0.1-security",
     "js-yaml": "^3.3.0",
     "opn": "^5.0.0",
