--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cron": "^1.2.1",
     "fs": "0.0.1-security",
     "js-yaml": "^3.3.0",
+    "kill-tabs": "^2.1.0",
     "opn": "^5.0.0",
     "randomstring": "^1.1.5",
     "swagger-tools": "0.10.1",
